<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Services App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pdf">PDFActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="start">Start Download</string>
    <string name="close">Close</string>
    <string name="pdf">PDFs Download Activity</string>
    <string name="txt">Text Files Download Activity</string>
    <string name="img">Images Download Activity</string>
    <string name="pdf1">PDF 1 File Location:</string>
    <string name="pdf2">PDF 2 File Location:</string>
    <string name="pdf3">PDF 3 File Location:</string>
    <string name="pdf4">PDF 4 File Location:</string>
    <string name="pdf5">PDF 5 File Location:</string>
    <string name="img1">Image 1 File Location:</string>
    <string name="img2">Image 2 File Location:</string>
    <string name="img3">Image 3 File Location:</string>
    <string name="img4">Image 4 File Location:</string>
    <string name="img5">Image 5 File Location:</string>
    <string name="txt1">Text File 1 File Location:</string>
    <string name="txt2">Text File 2 File Location:</string>
    <string name="txt3">Text File 3 File Location:</string>
    <string name="txt4">Text File 4 File Location:</string>
    <string name="txt5">Text File 5 File Location:</string>
    <string name="pdfuri1"><a ref="http://somesite.com/">Somesitre</a></string>
    <string name="MainScreenInfo">The purpose of the App is to study the role of Android System in creating and managing the lifecycle of Bound and Local Services.</string>

</resources>
