<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TextActivity" >
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal" >
        
    <Button
        android:id="@+id/button_txt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_txt_start_click"        
        android:text="@string/start" />

    <Button
        android:id="@+id/button_txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:onClick="button_txt_close_click"
        android:text="@string/close" />
    </LinearLayout>

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">

          <TextView
              android:id="@+id/txt1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/txt1" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/txtUri1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/robots.txt">
          </EditText> 
          <TextView
              android:id="@+id/txt2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/txt2" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/txtUri2"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri"
              android:textSize="12sp"
              android:text="http://switch.sjsu.edu/v20/data.txt">
              
          </EditText>
          <TextView
              android:id="@+id/txt3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/txt3"               
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/txtUri3"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.met.sjsu.edu/ncwfc/stations.txt">
          </EditText>
          <TextView
              android:id="@+id/txt4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/txt4" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/txtUri4"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.math.sjsu.edu/~foster/dictionary.txt">
          </EditText>
          <TextView
              android:id="@+id/txt5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/txt5" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/txtUri5"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.engr.sjsu.edu/MC2/sem_calendar_instructions.txt">
          </EditText>
    </LinearLayout>
</RelativeLayout>
