<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageActivity" >
    
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal" >
        
    <Button
        android:id="@+id/button_img_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_img_start_click"        
        android:text="@string/start" />

    <Button
        android:id="@+id/button_img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:onClick="button_img_close_click"
        android:text="@string/close" />
    </LinearLayout>

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">

          <TextView
              android:id="@+id/Img1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/img1" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/ImgUri1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/map/pics/campusmap.png">
          </EditText> 
          <TextView
              android:id="@+id/Img2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/img2" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/ImgUri2"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri"
              android:textSize="12sp"
              android:text="http://info.sjsu.edu/info/img/land_admission.jpg">
              
          </EditText>
          <TextView
              android:id="@+id/Img3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/img3"               
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/ImgUri3"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://info.sjsu.edu/info/img/land_schedules.jpg">
          </EditText>
          <TextView
              android:id="@+id/Img4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/img4" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/ImgUri4"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://artic.sjsu.edu/info/img/land_artic.jpg">
          </EditText>
          <TextView
              android:id="@+id/Img5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/img5" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/ImgUri5"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://my.sjsu.edu/pics/mybuttons/canvas_button/button-canvas.png">
          </EditText>
    </LinearLayout>    

</RelativeLayout>
