<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PDFActivity" >
    
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal" >
        
    <Button
        android:id="@+id/button_pdf_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="button_pdf_start_click"        
        android:text="@string/start" />

    <Button
        android:id="@+id/button_pdf_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:onClick="button_pdf_close_click"
        android:text="@string/close" />
    </LinearLayout>

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">

          <TextView
              android:id="@+id/PDF1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/pdf1" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/PDFUri1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/map/docs/SJSU_campus_map.pdf">
          </EditText> 
          <TextView
              android:id="@+id/PDF2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/pdf2" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/PDFUri2"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri"
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/president/docs/diversitymasterplan.pdf">
              
          </EditText>
          <TextView
              android:id="@+id/PDF3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/pdf4"               
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/PDFUri3"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/finance/docs/financial_statement_2011.pdf">
          </EditText>
          <TextView
              android:id="@+id/PDF4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/pdf4" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/PDFUri4"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/registrar/docs/FERPA_Workshop.pdf">
          </EditText>
          <TextView
              android:id="@+id/PDF5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="0dip"
              android:layout_marginTop="6dip"
              android:text="@string/pdf5" 
              android:textColor="#372c24" />
          <EditText
              android:id="@+id/PDFUri5"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:layout_marginTop="0dip"
              android:layout_marginBottom="0dip"
              android:inputType="textUri" 
              android:textSize="12sp"
              android:text="http://www.sjsu.edu/finance/docs/travel_approval.pdf">
          </EditText>
    </LinearLayout>

</RelativeLayout>
